[project]
name = "pythonuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Ubaid Hussain", email = "ukubaid74@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "streamlit>=1.42.2",
]

[project.scripts]
pythonuv = "pythonuv:main"

has = "pythonuv.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
